CODIZAOS-3 문제 및 문법 선택 화면 구성

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,12 @@
 <resources>
     <string name="app_name">codiz</string>
-    <string name="server_host">172.30.1.35</string>
+    <string name="server_host">192.168.0.13</string>
     <string name="server_port">8080</string>
+    <string name="title_activity_select">SelectActivity</string>
+    <!--
+    This string is used for square devices and overridden by hello_world in
+    values-round/strings.xml for round devices.
+    -->
+    <string name="hello_world">Hello Square World!</string>
+    <string name="title_activity_grammer">GrammerActivity</string>
 </resources>
